@startuml

class Device {
    - name : string
    + Device(name : string)
    + describe() : void
}

class InputDevice {
    + InputDevice(name : string)
    + describe() : void
}

class OutputDevice {
    + OutputDevice(name : string)
    + describe() : void
}

class TouchDisplay {
    + TouchDisplay(name : string)
    + describe() : void
}

Device <|-- InputDevice
Device <|-- OutputDevice
InputDevice <|-- TouchDisplay
OutputDevice <|-- TouchDisplay

note right of TouchDisplay
→ ambiguity
end note

@enduml